--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -29,21 +29,20 @@
         <!-- Contenedor principal -->
         <div class="col-lg-12 col-sm-12">
             <!-- Encabezado del buscador -->
-            <div class="col-lg-12 col-sm-12 d-flex justify-content-center mt-3 flex-lg-row flex-sm-column"
+            <div class="col-lg-12 col-sm-12 d-flex justify-content-center mt-3 flex-row flex-wrap px-5"
                 id="encabezadoBuscador">
                 <!-- Div de la imagen -->
-                <div class="col-lg-2 col-sm-12 d-flex justify-content-center align-items-center">
-                    <img src="/recursos/imagenes/marcas/adidas.svg" alt="Foto de la marca" id="imagenMarca"
-                        class="col-lg-8 col-sm-8">
+                <div class="col-lg-2 col-md-4 col-sm-5 col-5 d-flex justify-content-center align-items-center me-4">
+                    <img src="/recursos/imagenes/marcas/adidas.svg" alt="Foto de la marca" id="imagenMarca">
                 </div>
                 <!-- Div del texto -->
                 <div
-                    class="col-lg-8 col-sm-12 d-flex flex-sm-column flex-lg-row justify-content-center align-items-center ms-5 ms-sm-0">
+                    class="col-lg-9 col-sm-12 col-12 col-md-7 d-flex flex-row justify-content-center align-items-center ms-5 ms-sm-0">
                     <div class="col-lg-12 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                         <h1 class="titillium-web-bold col-lg-12 pb-0 mb-0 mt-sm-3" id="nombreDeLaMarca">
                             Adidas <!-- Título de la marca -->
                         </h1>
-                        <h6 class="titillium-web col-lg-12 col-sm-12 mt-sm-3" id="descripcionDeLaMarca">
+                        <p class="titillium-web col-lg-12 col-sm-12 mt-sm-3" id="descripcionDeLaMarca">
                             Zapatos de tacón alto de alta calidad y atractivos. Nos especializamos en tallas grandes,
                             llegando hasta la talla italiana 46. Diseñados para mujeres altas, hombres que disfrutan de
                             usar tacones y cualquier persona que ame lucir zapatos de tacón alto. Nuestra colección
@@ -51,7 +50,7 @@
                             que celebra la diversidad de estilos y tallas. Descubre la moda sin límites con nuestros
                             zapatos que combinan estilo y sofisticación, ideales para aquellos que desean destacar con
                             confianza en cualquier ocasión.
-                        </h6>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -96,7 +95,7 @@
                     </div>
                 </div>
                 <!-- Contenedor del filtro del buscador -->
-                <div class="col-lg-10 d-flex justify-content-center align-items-start mt-4">
+                <div class="col-lg-10 d-flex justify-content-center align-items-start mt-4 col-12">
                     <div class="col-lg-3 d-flex flex-column align-items-center justify-content-center">
                         <!-- Encabezado de filtros -->
                         <div
@@ -304,12 +303,12 @@
                             </div>
                         </div>
                     </div>
-                    <!--Contenedor del resultado y select-->
-                    <div class="col-lg-9 d-flex flex-column ms-2">
+                    <!--Contenedor del resultado y select col-lg-9 d-flex flex-column col-9-->
+                    <div class="A">
                         <!--Contenedor del resultado de las cardse2-->
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 col-12">
 
-                            <div class="row col-lg-12 justify-content-center mb-4" id="cardsZapato">
+                            <div class="row col-lg-12 col-12 justify-content-center mb-4" id="cardsZapato">
                                 <!--CONTENEDOR DE LA CARD-->
                                 <div class="col-lg-4 col-md-3 col-sm-6">
                                     <!--inicio de la card-->
@@ -474,15 +473,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-12 d-flex justify-content-center" id="pagination">
-                            <nav aria-label="Page navigation col-lg-10">
-                                <ul class="pagination col-lg-12">
+                        <div class="col-lg-12 d-flex justify-content-center col-12" id="pagination">
+                            <nav aria-label="Page navigation col-lg-10 col-10">
+                                <ul class="pagination col-lg-12 col-12">
                                     <li class="page-item backNext"><a class="page-link" href="#"
                                             aria-label="ANTERIOR">&laquo;
                                             ANTERIOR</a></li>
-                                    <li class="page-item num"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item num"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item num"><a class="page-link" href="#">3</a></li>
+                                    <li class="page-item num"><a class="page-link num2" href="#">1</a></li>
+                                    <li class="page-item num"><a class="page-link num2" href="#">2</a></li>
+                                    <li class="page-item num"><a class="page-link num2" href="#">3</a></li>
                                     <li class="page-item backNext"><a class="page-link" href="#"
                                             aria-label="SIGUIENTE">SIGUIENTE
                                             &raquo;</a></li>
