no se la verdad, modifique cositas del formato, y comence a hacer lo de agregar estrellita

--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -141,7 +141,7 @@
                 <div class="modal-content">
                     <!-- Encabezado del modal -->
                     <div class="modal-header d-flex justify-content-center align-items-center">
-                        <h1 class="modal-title fs-5 text-center" id="modalTitle"></h1>
+                        <h1 class="modal-title fs-5 text-center" id="modalTitle">Marcas</h1>
                     </div>
                     <!-- Formulario para crear o actualizar un registro -->
                     <form id="updateFrom" name="updateFrom">
