--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -81,8 +81,7 @@ TODO importante // realtando algo
                             <!--Redirrecion de olvidaste tu contraseña -->
                             <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
                                 for="olvidaste_clave">
-                                <a  class="color-5blue"
-                                    onclick="showForgotPasswordForm()">¿Olvidaste tu
+                                <a class="color-5blue" onclick="showForgotPasswordForm()">¿Olvidaste tu
                                     contraseña?</a>
                             </label>
                             <!--Contenedor boton del inicio de sesion -->
@@ -128,14 +127,14 @@ TODO importante // realtando algo
                                 <!--Texto para volver al inicio de sesion -->
                                 <label class="text-end col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2"
                                     for="volver_inicio_sesion">
-                                    <a  class="color-5blue" onclick="showLoginForm()">
+                                    <a class="color-5blue" onclick="showLoginForm()">
                                         Volver al inicio de sesión</a>
                                 </label>
                                 <!--Boton de mandar código -->
                                 <div class="d-flex justify-content-center">
                                     <div class="text-center col-sm-12 col-md-6">
                                         <button type="submit" class="btn btn-primary titillium-web-regular botonAzul"
-                                             onclick="showForgotPasswordStepTwoForm()">
+                                            onclick="showForgotPasswordStepTwoForm()">
                                             <i class="bi bi-send"></i>
                                             Mandar código
                                         </button>
