--- a/vistas/publico/tuspedidos.html
+++ b/vistas/publico/tuspedidos.html
@@ -43,8 +43,8 @@ TODO importante // realtando algo
                     </div>
                 </div>
             </div>
-            <div class="col-lg-12 mt-5 mb-4">
-                <div class="col-lg-10 offset-lg-2 d-flex flex-column">
+            <div class="col-lg-12 mb-4 mt-4">
+                <div class="col-lg-10 offset-lg-1 d-flex flex-column">
                     <h3 class="titillium-web">
                         Tus pedidos
                     </h3>
@@ -54,15 +54,17 @@ TODO importante // realtando algo
                                 X Pedidos realizados hasta el momento
                             </h5>
                         </div>
-                        <div class="col-lg-2">
-                            <select class="form-select rounded-3 text-center text-white bg-color-1gray"
-                                id="buscadorInput" required>
-                                <option value="1">Pendiente</option>
-                                <option value="2">En camino</option>
-                                <option value="3">Entregado</option>
-                                <option value="4">Más reciente</option>
-                                <option value="5">Antiguo</option>
-                            </select>
+                        <div class="col-lg-4 ms-4">
+                            <div class="col-11 d-flex justify-content-end">
+                                <select class="form-select rounded-3 text-center text-white bg-color-1gray"
+                                    id="buscadorInput" required>
+                                    <option value="1">Pendiente</option>
+                                    <option value="2">En camino</option>
+                                    <option value="3">Entregado</option>
+                                    <option value="4">Más reciente</option>
+                                    <option value="5">Antiguo</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -104,7 +106,8 @@ TODO importante // realtando algo
                                                 class="accordion-collapse collapse show col-lg-12">
                                                 <div class="accordion-body" id="detallesDeMasPedidoRepartidor">
                                                     <div class="col-lg-12">
-                                                        <div class="container d-flex align-items-center justify-content-center">
+                                                        <div
+                                                            class="container d-flex align-items-center justify-content-center">
                                                             <!--Comienzo de cards de zapato-->
                                                             <div class="containerCards col-lg-3 d-flex flex-wrap m-3">
                                                                 <div class="containerCard col-lg-12 flex-wrap"
@@ -207,7 +210,93 @@ TODO importante // realtando algo
                     </div>
                 </div>
             </div>
+            <div class="offset-lg-1 col-lg-10 mb-4">
+                <div class="cuadradox"></div>
+            </div>
+            <div class="offset-lg-3 col-lg-6 mb-4">
+                <div class="col-12">
+                    <button type="button"
+                        class="btn btn-primary titillium-web-regular bg-color-1gray text-white text-center"
+                        id="botonAgregarComentario" onclick="openDetails()">
+                        <i class="bi bi-send"></i>
+                        Agregar comentario
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!-- Modal para agregar un comentario-->
+        <div class="modal fade" id="dataModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="modalTitle" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-content">
+                    <!-- Encabezado del modal -->
+                    <div class="modal-header d-flex justify-content-center align-items-center">
+                        <h1 class="modal-title fs-5 text-center" id="modalTitle">Agregar comentario</h1>
+                    </div>
+                    <!-- Formulario para crear o actualizar un registro -->
+                    <form id="comentarioForm" name="comentarioForm">
+                        <div class="modal-body row g-3 d-flex flex-column align-items-center">
+                            <!-- Campo de titulo -->
+                            <div class="col-sm-12 col-md-12">
+                                <label for="calificacion" class="form-label">Títutlo del comentario:</label>
+                                <input id="calificacion" type="text" name="nombreTrabajador"
+                                    class="form-control editableInput" required readonly>
+                            </div>
 
+                            <!-- Área de comentario -->
+                            <div class="input-group">
+                                <span class="input-group-text">Comentario:</span>
+                                <textarea class="form-control" aria-label="With textarea" id="descripcionMarcaD"
+                                    readonly required></textarea>
+                            </div>
+
+                            <div class="col-12">
+                                <select class="form-select rounded-3 text-center text-white bg-color-1gray" id="zapato"
+                                    required>
+                                    <option value="1">
+                                        Nike Air Force 1'07
+                                    </option>
+                                </select>
+                            </div>
+
+                            <!-- Campo de calificacion -->
+                            <div class="col-12 d-flex flex-column">
+                                <label for="calificacion" class="form-label col-12">Calificación:</label>
+                                <div class="col-12 container1">
+                                    <div class="star">
+                                        <a href="#" class="bi-star-fill"></a>
+                                        <a href="#" class="bi-star-fill"></a>
+                                        <a href="#" class="bi-star-fill"></a>
+                                        <a href="#" class="bi-star-fill"></a>
+                                        <a href="#" class="bi-star-fill"></a>
+                                    </div>
+                                </div>
+                                
+                            </div>
+
+                            <!-- Botones en el pie del modal -->
+                            <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
+                                <div class="contenedorBotones3 offset-lg-3 col-6">
+                                    <div class="col-12 d-flex justify-content-center">
+                                        <!-- Botón para cancelar la operación -->
+                                        <button type="button" id="cancelarBtn"
+                                            class="btn btn2 btn-primary me-2 shadow text18 titillium-web-regular col-4"
+                                            onclick="botonCancelar()">
+                                            Cancelar
+                                        </button>
+                                        <!-- Botón para actualizar el registro -->
+                                        <button type="button" id="agregarBtn"
+                                            class="btn btn3 btn-primary shadow text18 titillium-web-regular col-4"
+                                            onclick="botonAgregar()">
+                                            Agregar
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -217,6 +306,7 @@ TODO importante // realtando algo
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador del sitio publico -->
     <script type="text/javascript" src="/controlador/utilidades/publico.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="/controlador/publico/tuspedidos.js"></script>
 </body>
