--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -96,7 +96,7 @@
                 </div>
                 <!-- Contenedor del filtro del buscador -->
                 <div class="col-lg-10 d-flex justify-content-center align-items-start mt-4 col-12">
-                    <div class="col-lg-3 d-flex flex-column align-items-center justify-content-center">
+                    <div class="col-lg-3 d-flex flex-column align-items-center justify-content-center me-5">
                         <!-- Encabezado de filtros -->
                         <div
                             class="col-lg-12 col-md-12 contendorFiltroHeader d-flex flex-row align-items-center pt-2 ps-1">
