--- a/vistas/publico/tuspedidos.html
+++ b/vistas/publico/tuspedidos.html
@@ -24,6 +24,7 @@ TODO importante // realtando algo
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
     <link href="../../recursos/estilos/publico/plantilla.css" rel="stylesheet">
@@ -218,7 +219,6 @@ TODO importante // realtando algo
                     <button type="button"
                         class="btn btn-primary titillium-web-regular bg-color-1gray text-white text-center"
                         id="botonAgregarComentario" onclick="openDetails()">
-                        <i class="bi bi-send"></i>
                         Agregar comentario
                     </button>
                 </div>
@@ -240,14 +240,14 @@ TODO importante // realtando algo
                             <div class="col-sm-12 col-md-12">
                                 <label for="calificacion" class="form-label">Títutlo del comentario:</label>
                                 <input id="calificacion" type="text" name="nombreTrabajador"
-                                    class="form-control editableInput" required readonly>
+                                    class="form-control editableInput" required>
                             </div>
 
                             <!-- Área de comentario -->
                             <div class="input-group">
                                 <span class="input-group-text">Comentario:</span>
                                 <textarea class="form-control" aria-label="With textarea" id="descripcionMarcaD"
-                                    readonly required></textarea>
+                                    required></textarea>
                             </div>
 
                             <div class="col-12">
@@ -260,9 +260,9 @@ TODO importante // realtando algo
                             </div>
 
                             <!-- Campo de calificacion -->
-                            <div class="col-12 d-flex flex-column">
-                                <label for="calificacion" class="form-label col-12">Calificación:</label>
-                                <div class="col-12 container1">
+                            <div class="col-12 d-flex flex-column justify-content-center">
+                                <label for="calificacion" class="form-label col-12 d-flex justify-content-center mb-0 mt-2"><h3 class="titillium-web text20">Calificación</h3></label>
+                                <div class="col-12 container1 d-flex justify-content-center">
                                     <div class="star">
                                         <a href="#" class="bi-star-fill"></a>
                                         <a href="#" class="bi-star-fill"></a>
