--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -344,76 +344,152 @@
                         <div class="modal-dialog modal-lg modal-dialog-centered">
                             <div class="modal-content">
                                 <!-- Encabezado del modal -->
-                                <div class="modal-header d-flex justify-content-start align-items-start">
+                                <div class="modal-header d-flex justify-content-center align-items-center">
                                     <h1 class="modal-title fs-5 text-start" id="modalTitleT"></h1>
                                 </div>
                                 <!-- Formulario para crear o actualizar un registro -->
-                                <div class="ContenedorTabla">
-                                    <table class="tablaTallas">
-                                        <thead>
-                                            <tr>
-                                                <th>N°</th>
-                                                <th>Talla</th>
-                                                <th>Stock Actual</th>
-                                                <th>Ingreso de Datos</th>
-                                                
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td data-labelN="N°">01</td>
-                                                <td data-labelT="Talla">01</td>
-                                                <td data-labelS="Stock Actual">01</td>
-                                                <td> <button> </button></td>
-                                            </tr>
-                                            <tr>
-                                                <td data-labelN="N°">01</td>
-                                                <td data-labelT="Talla">01</td>
-                                                <td data-labelS="Stock Actual">01</td>
-                                                <td> <button> </button></td>
-                                            </tr>
-                                            <tr>
-                                                <td data-labelN="N°">01</td>
-                                                <td data-labelT="Talla">01</td>
-                                                <td data-labelS="Stock Actual">01</td>
-                                                <td> <button> </button></td>
-                                            </tr>
-                                            <tr>
-                                                <td data-labelN="N°">01</td>
-                                                <td data-labelT="Talla">01</td>
-                                                <td data-labelS="Stock Actual">01</td>
-                                                <td> <button> </button></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                <div class="ContenedorTotalT">
+                                    <div class="ContenedorTabla d-flex flex-colum align-items-center">
+                                        <table class="tablaTallas mt-3">
+                                            <thead>
+                                                <tr>
+                                                    <th>N°</th>
+                                                    <th>Talla</th>
+                                                    <th>Stock Actual</th>
+                                                    <th>Ingreso de Datos</th>
 
-                                </div>
-                                        <!-- Botones en el pie del modal -->
-                                        <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
-                                            <div class="contenedorBotones3">
-                                                <!-- Botón para cancelar la operación -->
-                                                <button type="button" id="cancelarBtn"
-                                                    class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                                    onclick="botonCancelar()">
-                                                    Cancelar
-                                                </button>
-                                                <!-- Botón para actualizar el registro -->
-                                                <button type="button" id="actualizarBtn"
-                                                    class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                                    onclick="botonActualizar()">
-                                                    Actualizar
-                                                </button>
-                                            </div>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td data-labelN="N°">01</td>
+                                                    <td data-labelT="Talla">01</td>
+                                                    <td data-labelS="Stock Actual">01</td>
+                                                    <td> <button class="Verde"> <img class="note"
+                                                                src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                        <button class="Rojo"> <img class="note"
+                                                                src="/recursos/imagenes/basura.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td data-labelN="N°">01</td>
+                                                    <td data-labelT="Talla">01</td>
+                                                    <td data-labelS="Stock Actual">01</td>
+                                                    <td> <button class="Verde"> <img class="note"
+                                                                src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                        <button class="Rojo"> <img class="note"
+                                                                src="/recursos/imagenes/basura.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td data-labelN="N°">01</td>
+                                                    <td data-labelT="Talla">01</td>
+                                                    <td data-labelS="Stock Actual">01</td>
+                                                    <td> <button class="Verde"> <img class="note"
+                                                                src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                        <button class="Rojo"> <img class="note"
+                                                                src="/recursos/imagenes/basura.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td data-labelN="N°">01</td>
+                                                    <td data-labelT="Talla">01</td>
+                                                    <td data-labelS="Stock Actual">01</td>
+                                                    <td> <button class="Verde"> <img class="note"
+                                                                src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                        <button class="Rojo"> <img class="note"
+                                                                src="/recursos/imagenes/basura.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td data-labelN="N°">01</td>
+                                                    <td data-labelT="Talla">01</td>
+                                                    <td data-labelS="Stock Actual">01</td>
+                                                    <td> <button class="Verde"> <img class="note"
+                                                                src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                        <button class="Rojo"> <img class="note"
+                                                                src="/recursos/imagenes/basura.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td data-labelN="N°">01</td>
+                                                    <td data-labelT="Talla">01</td>
+                                                    <td data-labelS="Stock Actual">01</td>
+                                                    <td> <button class="Verde"> <img class="note"
+                                                                src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                        <button class="Rojo"> <img class="note"
+                                                                src="/recursos/imagenes/basura.svg" width="35px"
+                                                                height="35px">
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="lineaS align-items-center mt-4"></div>
+                                    <div class="contenedorImagen d-flex flex-column align-items-center">
+                                        <h1 class="text-white titillium-web-regular text25 text-white mt-3">Foto del zapato
+                                        </h1>
+                                        <!-- Imagen seleccionada y botón para elegir imagen -->
+                                        <img id="selectedImageD " class="sizeCard borderImage"
+                                            src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"
+                                            alt="example placeholder" />
+                                        <div class="btn btn-primary btn-rounded mt-3">
+                                            <label class="form-label text-white m-1" for="customFile1">Seleccionar
+                                                imagen</label>
+                                            <input type="file" class="form-control d-none" id="customFile1" readonly
+                                                onchange="displaySelectedImage(event, 'selectedImageD')" />
                                         </div>
                                     </div>
-                                </form>
+                                </div>
+                                <!-- Botones en el pie del modal -->
+                                <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
+                                    <div class="contenedorBotones3">
+                                        <!-- Botón para cancelar la operación -->
+                                        <button type="button" id="cancelarBtn"
+                                            class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                            onclick="botonCancelar()">
+                                            Cancelar
+                                        </button>
+                                        <!-- Botón para actualizar el registro -->
+                                        <button type="button" id="actualizarBtn"
+                                            class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                            onclick="botonActualizar()">
+                                            Actualizar
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        </div>
+        </div>
     </main>
     <footer id="footer"></footer>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
