--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -505,7 +505,7 @@
                                             <input type="text" class="form-control" id="floatingInputDisabled"
                                                 placeholder="Nike Dunk Low" disabled>
                                         </div>
-                                        <div class="formZapato mt-2  col-md-5">
+                                        <div class="formGenero mt-2 me-5 col-md-5">
                                             <label for="exampleFormControlInput1" class="formMarca">Género del
                                                 zapato</label>
                                             <input type="text" class="form-control" id="floatingInputDisabled"
@@ -517,21 +517,39 @@
                                             <input type="text" class="form-control" id="floatingInputDisabled"
                                                 placeholder="Nike" disabled>
                                         </div>
-                                        <div class="formZapato mt-2 col-md-5">
+                                        <div class="formGenero mt-2 me-5 col-md-5">
                                             <label for="exampleFormControlInput1" class="formMarca">Precio del
                                                 zapato</label>
                                             <input type="text" class="form-control" id="floatingInputDisabled"
                                                 placeholder="$90" disabled>
                                         </div>
-                                        <div class="formZapato mt-2 col-md-11">
-                                            <label for="exampleFormControlInput1" class="formMarca">Descripcion del zapato</label>
-                                            <input type="text" class="form-control" id="floatingInputDisabled"
-                                                placeholder="Buen zapato" disabled>
+                                        <div class="formZapato mt-2 mb-4 col-md-10">
+                                            <label for="exampleFormControlInput1" class="formMarca">Descripcion del
+                                                zapato</label>
+                                            <textarea class="form-control" id="exampleFormControlInput  1"
+                                                disabled> </textarea>
                                         </div>
                                     </div>
-
+                                    <div class="ContenedorFoto d-flex flex-column align-items-center">
+                                        <h3>Foto del zapato</h3>
+                                        <img id="selectedImageD" class="sizeCard1 borderImage"
+                                            src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"
+                                            alt="example placeholder" />
+                                        <div class="btn btn-primary btn-rounded mt-3">
+                                            <label class="form-label text-white m-1" for="customFile1">Seleccionar
+                                                imagen</label>
+                                            <input type="file" class="form-control d-none" id="customFile1" readonly
+                                                onchange="displaySelectedImage(event, 'selectedImageD')" />
+                                        </div>
+                                    <div class="ContenedorBajo d-flex flex-row">
+                                        <button type="button" id="botonD"
+                                            class="btn4 btn-primary mt-4 shadow text15 titillium-web-regular"
+                                            onclick="openTallas()" > Editar Detalles Finales
+                                        </button>
+                                    </div>  
+                                </div>                                  
+                                    
                                 </div>
-
                                 <!-- Botones en el pie del modal -->
                                 <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
                                     <div class="contenedorBotones3">
