Arreglos en zapatos

--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -455,14 +455,14 @@
                                             zapato
                                         </h1>
                                         <!-- Imagen seleccionada y botón para elegir imagen -->
-                                        <img id="selectedImageD " class="sizeCard borderImage"
+                                        <img id="selectedImageF" class="sizeCard borderImage"
                                             src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"
                                             alt="example placeholder" />
                                         <div class="btn btn-primary btn-rounded mt-3">
-                                            <label class="form-label text-white m-1" for="customFile1">Seleccionar
+                                            <label class="form-label text-white m-1" for="customFile2">Seleccionar
                                                 imagen</label>
-                                            <input type="file" class="form-control d-none" id="customFile1" readonly
-                                                onchange="displaySelectedImage(event, 'selectedImageD')" />
+                                            <input type="file" class="form-control d-none" id="customFile2" readonly
+                                                onchange="displaySelectedImage(event, 'selectedImageF')" />
                                         </div>
                                     </div>
                                 </div>
@@ -470,15 +470,15 @@
                                 <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
                                     <div class="contenedorBotones3">
                                         <!-- Botón para cancelar la operación -->
-                                        <button type="button" id="cancelarBtn"
+                                        <button type="button" id="cancelarBtn2"
                                             class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                            onclick="botonCancelar()">
+                                            onclick="botonCancelar2()">
                                             Cancelar
                                         </button>
                                         <!-- Botón para actualizar el registro -->
-                                        <button type="button" id="actualizarBtn"
+                                        <button type="button" id="actualizarBtn2"
                                             class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                            onclick="botonActualizar()">
+                                            onclick="botonActualizar2()">
                                             Actualizar
                                         </button>
                                     </div>
@@ -554,15 +554,15 @@
                                 <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
                                     <div class="contenedorBotones3">
                                         <!-- Botón para cancelar la operación -->
-                                        <button type="button" id="cancelarBtn"
+                                        <button type="button" id="cancelarBtn3"
                                             class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                            onclick="botonCancelar()">
+                                            onclick="botonCancelar3()">
                                             Cancelar
                                         </button>
                                         <!-- Botón para actualizar el registro -->
-                                        <button type="button" id="actualizarBtn"
+                                        <button type="button" id="actualizarBtn3"
                                             class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                            onclick="botonActualizar()">
+                                            onclick="botonActualizar3()">
                                             Actualizar
                                         </button>
                                     </div>
