COMENTARIOS EN ARCHIVOS HTML

--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -42,6 +42,7 @@
                         <h1 class="titillium-web-bold col-lg-12 pb-0 mb-0 mt-sm-3" id="nombreDeLaMarca">
                             Adidas <!-- Título de la marca -->
                         </h1>
+                        <!--DESCRIPCION DE LA MARCA-->
                         <p class="titillium-web col-lg-12 col-sm-12 mt-sm-3" id="descripcionDeLaMarca">
                             Zapatos de tacón alto de alta calidad y atractivos. Nos especializamos en tallas grandes,
                             llegando hasta la talla italiana 46. Diseñados para mujeres altas, hombres que disfrutan de
@@ -117,6 +118,7 @@
                         <!-- Accordion de los filtros -->
                         <div class="accordion col-lg-12 col-md-12 rounded-0 border border-0 bg-color-0gray"
                             id="accordionDeFiltros">
+                            <!--ACCORDION DE TALLAS-->
                             <div class="accordion-item col-md-12 rounded-0 border border-0 bg-color-0gray">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button color-5blue titillium-web-bold bg-color-0gray"
@@ -126,9 +128,11 @@
                                         TALLAS
                                     </button>
                                 </h2>
+                                <!--COMIENZO DEL CUERPO DEL ACCODION QUE SE ABRE-->
                                 <div id="panelTallasAccordionAlwaysOpen" class="accordion-collapse collapse show">
                                     <div class="accordion-body">
                                         <div class="tallasScroll col-lg-12 col-md-12 d-flex justify-content-center">
+                                            <!--CARDS DE TALLAS-->
                                             <div
                                                 class="contenedorFilaTallas d-flex flex-row flex-wrap justify-content-center">
                                                 <div class="cuadradoTalla">
@@ -201,6 +205,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!--ACCORDION DE COLORES-->
                             <div class="accordion-item col-md-12 rounded-0 border border-0 bg-color-0gray">
                                 <h2 class="accordion-header">
                                     <button
@@ -212,10 +217,12 @@
                                     </button>
                                 </h2>
                                 <div id="panelColorAccordionAlwaysOpen" class="accordion-collapse collapse">
+                                    <!--contedor del SELECT-->
                                     <div
                                         class="accordion-body col-lg-12 col-md-12 d-flex justify-content-center align-items-center">
                                         <div class="col-lg-10 col-md-10">
                                             <div class="col-lg-12 col-md-12">
+                                                <!--SELECCION DE COLORES-->
                                                 <select class="form-select color-5blue" id="coloresSelect">
                                                     <option disabled selected>Selecciona un color</option>
                                                     <option value="1">Rojo</option>
@@ -226,6 +233,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!--ACCORDION DE GENERO-->
                             <div class="accordion-item rounded-0 col-md-12 border border-0 bg-color-0gray">
                                 <h2 class="accordion-header">
                                     <button
@@ -236,8 +244,10 @@
                                         GENEROS
                                     </button>
                                 </h2>
+                                <!--ACCORDION DE BODY CHECK-->
                                 <div id="generosPanelAccordionAlwaysOpen" class="accordion-collapse collapse">
                                     <div class="accordion-body">
+                                        <!--DIV DE cHECK para seleccion de los generos de zapato-->
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" value=""
                                                 id="checkboxHombre">
@@ -264,6 +274,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!--ACCORDION DE PRECIO-->
                             <div class="accordion-item rounded-0 border col-md-12 border-0">
                                 <h2 class="accordion-header">
                                     <button
@@ -274,8 +285,10 @@
                                         PRECIO
                                     </button>
                                 </h2>
+                                <!--ACCORDION DE BODY rango-->
                                 <div id="precioPanelAccordionAlwaysOpen" class="accordion-collapse collapse">
                                     <div class="accordion-body bg-color-0gray">
+                                        <!--DIV DEL RANGO DEL PRECIO-->
                                         <div class="col-lg-12 col-md-12 mt-4 container2">
                                             <div class="slider">
                                                 <div class="progress"></div>
@@ -307,9 +320,8 @@
                     <div class="A">
                         <!--Contenedor del resultado de las cardse2-->
                         <div class="col-lg-12 col-12">
-
                             <div class="row col-lg-12 col-12 justify-content-center mb-4" id="cardsZapato">
-                                <!--CONTENEDOR DE LA CARD-->
+                                <!--CONTENEDOR DE LA CARD DE ZAPATOS-->
                                 <div class="col-lg-4 col-md-3 col-sm-6">
                                     <!--inicio de la card-->
                                     <div class="card col-lg-12 col-md-12 col-sm-12" id="cardC">
@@ -473,6 +485,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!--DIV PARA LA NAVEGACION ENTRE RESULTADOS-->
                         <div class="col-lg-12 d-flex justify-content-center col-12" id="pagination">
                             <nav aria-label="Page navigation col-lg-10 col-10">
                                 <ul class="pagination col-lg-12 col-12">
