--- a/vistas/publico/carrito.html
+++ b/vistas/publico/carrito.html
@@ -149,26 +149,31 @@ TODO importante // realtando algo
                                 <!--FORMULARIO-->
                                 <div class="ContenedorForm col-lg-12 mt-3 mb-3">
                                     <form class="row needs-validation form1 col-lg-12" novalidate>
+                                        <!--NOMBRES-->
                                         <div class="col-md-6 mt-3">
                                             <input type="text" class="form-control" id="nombreInput"
                                                 placeholder="Ingresa los nombres" value="Adriana Paola" required>
                                         </div>
+                                        <!--APELLIDOS-->
                                         <div class="col-md-6 mt-3">
                                             <input type="text" class="form-control" id="apellidosInput"
                                                 placeholder="Ingresa los apellidos" value="Menjía" required>
                                         </div>
+                                        <!--DIRECCION-->
                                         <div class="col-md-12 mt-3">
                                             <input type="text" class="form-control" id="direccion"
                                                 placeholder="Ingres la direccion" value="mi casita" required>
                                         </div>
+                                        <!--CORREO ELECTRONICO-->
                                         <div class="col-md-6 mt-3">
                                             <input type="email" class="form-control" id="correoInput"
                                                 placeholder="Ingresa el correo electronico"
                                                 value="adrigol.lola@gmail.com" required>
                                         </div>
+                                        <!--TELEFONO-->
                                         <div class="col-md-6 mt-3">
                                             <input type="text" class="form-control" id="telefonoInput"
-                                                placeholder="Ingresa el número telefonico" value="+503 7084 2281"
+                                                placeholder="Ingresa el número telefonico" value="7084-2281"
                                                 required>
                                         </div>
                                     </form>
@@ -183,7 +188,7 @@ TODO importante // realtando algo
                                 <!--LETRAS-->
                                 <h4 class="titillium-web-bold">Método de pago</h4>
                                 <h6 class="titillium-web">Selecciona el método de pago</h6>
-                                <!--METOOD DE PAGA-->
+                                <!--METOOD DE PAGA, CHEK RADIO-->
                                 <div class="ContenedorForm col-lg-12 mt-3 mb-4">
                                     <div class="form-check col-lg-12">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
