--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -37,18 +37,20 @@
                             <!-- *Contenedor del titulo de reseñas -->
                             <h2 class="titillium-web-semibold text-white">Reseñas</h2>
                         </div>
-
+                        <!-- *Contenedor de los comentarios-->
                         <div
                             class="contenedorComentarios p-2 d-flex flex-column mt-5 pt-4 col-12 col-sm-12 col-md-11 col-lg-11">
-                            <!-- *Contenedor de los comentarios-->
+                            <!-- *Contenedor del comentario-->
                             <div class="comentario mt-5 shadow p-3"> <!-- *Comentario 1-->
                                 <div
                                     class="comentarioHeader d-flex flex-row flex-wrap  justify-content-between align-items-center">
+                                    <!--DIV del nombre del usuario-->
                                     <div class="comentarioUser">
                                         <h6 class="m-0 p-0 titillium-web-regular text-black">
                                             Margarita Osorio
                                         </h6>
                                     </div>
+                                    <!--DIV de la fecha del comentario-->
                                     <div class="comentarioFecha">
                                         <h6 class="m-0 p-0 titillium-web-regular color-gray1">
                                             05/02/2024
@@ -57,12 +59,13 @@
                                 </div>
 
                                 <div class="comentarioBody d-flex flex-column mt-4 pt-2">
+                                    <!--DIV del titulo del comentario-->
                                     <div class="comentarioTitulo">
                                         <h5 class="titillium-web-bold">
                                             ¡Muy Buen Zapato!
                                         </h5>
                                     </div>
-
+                                    <!--DIV de la descripcion del comentario-->
                                     <div class="comentarioDesc">
                                         <p class="titillium-web-regular">
                                             El mejor zapato que he probado en mi vida, muy buen diseño bla bla bla bla
@@ -72,6 +75,7 @@
                                 </div>
 
                                 <div class="comentarioFooter d-flex flex-row justify-content-end flex-wrap">
+                                    <!--DIV de las estrellas-->
                                     <div class="estrellasImg">
                                         <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
@@ -84,7 +88,7 @@
                                         <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
                                     </div>
-
+                                    <!--DIV del numero de la calificacion-->
                                     <div class="estrellasNum">
                                         <div class="d-flex flex-row-reverse align-items-center mt-2 ">
                                             <img src="/recursos/imagenes/icons/starFill.svg" alt="">
@@ -94,6 +98,7 @@
                                 </div>
                             </div>
 
+                            <!-- *Contenedor del comentario-->
                             <div class="comentario mt-5 shadow p-3"> <!-- *Comentario 2-->
                                 <div
                                     class="comentarioHeader d-flex flex-row flex-wrap  justify-content-between align-items-center">
@@ -147,6 +152,7 @@
                                 </div>
                             </div>
 
+                            <!-- *Contenedor del comentario-->
                             <div class="comentario mt-5 shadow p-3"> <!-- *Comentario 3-->
                                 <div
                                     class="comentarioHeader d-flex flex-row flex-wrap  justify-content-between align-items-center">
@@ -200,6 +206,7 @@
                                 </div>
                             </div>
 
+                            <!-- *Contenedor del comentario-->
                             <div class="comentario mt-5 shadow p-3"> <!-- *Comentario 4-->
                                 <div
                                     class="comentarioHeader d-flex flex-row flex-wrap  justify-content-between align-items-center">
@@ -252,31 +259,34 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-
                     </div>
                 </div>
+                <!--CONTENEDOR DE LA INFO DEL ZAPATO-->
                 <div class="columna2 col-lg-7 col-md-6 col-sm-12">
                     <div class="contenedorTitulo">
+                        <!--NOMBRE-->
                         <h1 class="m-0 p-0 titillium-web-regular">
                             Nike Air Force 1'07
                         </h1>
+                        <!--GENERO-->
                         <h6 class="m-0 p-0 titillium-web-regular clgr2">
                             Zapatos tipo UNISEX
                         </h6>
                     </div>
-
+                    <!--CONTENEDOR DEL PRECIO Y ESTRALLAS, CALIFIACIOn-->
                     <div class="contenedorPrecioCalificacion d-flex flex-row justify-content-start mt-4 mb-4">
+                        <!-- PRECIO-->
                         <h3 class="m-0 p-0 titillium-web-bold">
                             $120
                         </h3>
+                        <!-- CALIFICACION-->
                         <div class="contenedorCalificacion d-flex flex-row align-items-center ms-4">
                             <img src="/recursos/imagenes/icons/starFill.svg" alt="">
                             <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar2">5</p>
                         </div>
                     </div>
-
+                    <!-- CONTENEDOR DE COLORES DISPONIBLES-->
                     <div class="contenedorColoresTotal">
                         <div class="contenedorTitulo">
                             <h5 class="m-0 p-0 titillium-web-bold clgr2 mb-2">
@@ -297,7 +307,7 @@
                         </div>
                     </div>
 
-
+                    <!-- CONTENEDOR DE DESCRIPCION DE ZAPATO-->
                     <div class="contenedorDescripcion mt-5">
                         <div class="tituloDescripcion">
                             <h4 class="m-0 p-0 titillium-web-bold">
@@ -315,6 +325,7 @@
                         </div>
                     </div>
 
+                    <!-- CONTENEDOR DE TALLAS-->
                     <div class="contenedorTallas d-flex flex-column mt-4 shadow p-3">
                         <div class="tituloTallas">
                             <h4 class="m-0 p-0 titillium-web-bold">
@@ -322,6 +333,7 @@
                             </h4>
                         </div>
                         <div class="tallasScroll mt-2 ms-4">
+                            <!-- CARDS DE LAS TALLAS DISPONIBLES-->
                             <div class="contenedorFilaTallas d-flex flex-row flex-wrap">
                                 <div class="cuadradoTalla">
                                     <h5 class="titillium-web-regular m-0 p-0">
@@ -686,28 +698,28 @@
                             </div>
                         </div>
                     </div>
-
+                    <!-- CONTENEDOR DE BOTON DE AGREGAR CARRITO Y DE LA CANTIDAD FALTANTE-->
                     <div
                         class="contenedorBotonCantidad mt-5 pt-4 col-12 d-flex flex-column justify-content-center align-items-center mb-5">
-
+                        <!-- BOTON DE AGREGAR CARRITO-->
                         <button type="button" id="agregarCarritoBtn" onclick="AddCarrito()"
                             class="btn btn-primary shadow bg-color-5blue col-lg-7 col-md-12 col-sm-12 col-12">
                             <h5 class="titillium-web-regular m-0 p-0 pt-2 pb-2">
                                 Agregar al carrito
                             </h5>
                         </button>
-
+                        <!-- CANTIDAD DISPONIBLE-->
                         <h6 class="m-0 p-0 titillium-web-regular clgr2 mt-3 ">
                             Cantidad todavía disponible: 25 ejemplares
                         </h6>
                     </div>
-
                 </div>
             </div>
-
+            <!-- CONTENEDOR DEL CARRUSEL DE IMAGES-->
             <div class="contenedor2 d-flex flex-column mt-5">
                 <!--*Slider de recomendados-->
                 <h1 class="titillium-web-regular text35 mx-5 text-black mt-3 mb-1"> También podría gustarte</h1>
+                <!-- CARDS DE ZAPATOS-->
                 <div class="containerCards d-flex flex-nowrap">
                     <div class="card col-4 cardC">
                         <a href="/vistas/publico/detalle_zapato.html" class="text15">
