--- a/vistas/publico/tuspedidos.html
+++ b/vistas/publico/tuspedidos.html
@@ -45,16 +45,20 @@ TODO importante // realtando algo
                 </div>
             </div>
             <div class="col-lg-12 mb-4 mt-4">
+                <!--CONTENEDOR DE TEXTO DE TUS PEDiDOS TITULO Y SELECT DE PEDIDOS-->
                 <div class="col-lg-10 offset-lg-1 d-flex flex-column">
                     <h3 class="titillium-web">
                         Tus pedidos
                     </h3>
+                    <!--CONTENDOR DEL SELECT-->
                     <div class="col-lg-12 d-flex">
+                        <!--TExTo CON CANTIDAD DE PEDIDOS REALIZADOS-->
                         <div class="col-lg-6">
                             <h5 class="titillium-web-extralight" id="pedidosHechos">
                                 X Pedidos realizados hasta el momento
                             </h5>
                         </div>
+                        <!--SELECT-->
                         <div class="col-lg-4 ms-4">
                             <div class="col-11 d-flex justify-content-end">
                                 <select class="form-select rounded-3 text-center text-white bg-color-1gray"
