--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -35,6 +35,7 @@ TODO importante // realtando algo
     <main>
         <div class="containerTotal d-flex flex-column col-lg-12 col-12 position-relative z-3">
             <div class="triangulo position-absolute z-0"></div>
+            <!--CONTENEDOR DEL HEADER Y DEL TEXTO-->
             <div class="containerHeader bg-color-1blue d-flex flex-column justify-content-center">
                 <div class="d-flex flex-column align-items-center position-relative">
                     <h1 class="text-white titillium-web-bold">
@@ -46,7 +47,7 @@ TODO importante // realtando algo
                     <div class="lineab1 titillium-web-regular col-lg-9 col-md-10 col-sm-11 col-11"></div>
                 </div>
             </div>
-
+            <!--COTENEDOR DE QUIENES somos y QUR HACEMOS-->
             <div class="containerHoWeAre d-flex flex-row justify-content-end col-12 mt-5 mb-5 p-2">
                 <div
                     class="col-10 offset-col-sm-2 m-0 px-4 justify-content-center align-items-center align-content-center d-flex flex-column mt-3 mb-3">
@@ -70,17 +71,20 @@ TODO importante // realtando algo
                     </p>
                 </div>
             </div>
-
+            <!--CONTENEDOR DE LOS CREADORES-->
             <div
                 class="containerMembers d-flex flex-row flex-wrap justify-content-center bg-color-1blue pt-5 pb-5 col-12">
-
+                <!--CONTENEDOR INDIVUDAL DE LA PERSONA, IMAGEN, NOMBRE Y DESCRIOciOn-->
                 <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
+                    <!--IMAGEN-->
                     <div>
                         <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
                     </div>
 
                     <div class="containerTextMmber">
-                        <h2 class="text-white titillium-web-regular mt-2">Adriana Mejía</h2>
+                        <!--NOMBRE-->
+                        <h2 class="text-white titillium-web-regular mt-2">Fernando Gómez</h2>
+                        <!--DESCRIPCION-->
                         <p class="text-white titillium-web-regular text-align-center mt-3">
                             Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
                             porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
@@ -107,7 +111,7 @@ TODO importante // realtando algo
                             vehicula leo nascetur venenatis ultrici
                         </p>
                     </div>
-
+                    <!---DIVISION-->
                     <div class="lineah1"></div>
                 </div>
 
@@ -118,7 +122,7 @@ TODO importante // realtando algo
                     </div>
 
                     <div class="containerTextMmber">
-                        <h2 class="text-white titillium-web-regular mt-2">Adriana Mejía</h2>
+                        <h2 class="text-white titillium-web-regular mt-2">Emiliano Jacobo</h2>
                         <p class="text-white titillium-web-regular text-align-center mt-3">
                             Lorem ipsum dolor sit amet consectetur, adipiscing elit etiam habitasse. Justo nostra lacus
                             porttitor convallis nisi habitasse commodo vehicula turpis praesent, sagittis fringilla cras
@@ -130,11 +134,12 @@ TODO importante // realtando algo
                     <div class="lineah2"></div>
                 </div>
             </div>
-
+            <!--CONTENEDOR DE MISION, VISION, nuiestro comienzos y valores-->
             <div class="containerMVVN d-flex flex-column col-12 bg-color-1blue">
                 <div class="r1 d-flex flex-row flex-wrap col-12 mb-5 ">
                     <div
                         class="containerMision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm d-flex flex-column justify-content-center align-items-center bg-color-white">
+                        <!--CONTENDOR DE MISION-->
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular ">
                                 Misión
@@ -155,6 +160,7 @@ TODO importante // realtando algo
                         </div>
                     </div>
                     <div class="containerVision col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm bg-color-white">
+                        <!--CONTENDOR DE VISIONN-->
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular">
                                 Visión
@@ -178,6 +184,7 @@ TODO importante // realtando algo
 
                 <div class="r2 d-flex flex-row flex-wrap justify-content-between col-12">
                     <div class="containerValores col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm bg-color-white">
+                        <!--CONTENDOR DE VALORES-->
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular">
                                 Valores
@@ -198,6 +205,7 @@ TODO importante // realtando algo
                         </div>
                     </div>
                     <div class="containerComienzo col-lg-6 col-md-6 col-sm-12 col-12 shadow-sm bg-color-white">
+                        <!--CONTENDOR DE NUESTRO COMIENZO-->
                         <div class="col-12 text-center cntnrtxt">
                             <h2 class="titillium-web-regular">
                                 Nuestro Comienzo
